--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "frankly",
   "version": "0.0.1-pre1",
   "description": "stupid simple docs for your express thing",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel src -d lib",
+    "watch": "babel src -d lib -w",
+    "test": "mocha --compilers js:babel-register"
+  },
+  "engines": {
+    "node": ">=4.4.0"
   },
   "repository": {
     "type": "git",
@@ -31,5 +36,21 @@
   "bugs": {
     "url": "https://github.com/juristat-oss/frankly/issues"
   },
-  "homepage": "https://github.com/juristat-oss/frankly#readme"
+  "homepage": "https://github.com/juristat-oss/frankly#readme",
+  "peerDependencies": {
+    "express": "^4.0.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.9.0",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-register": "^6.9.0",
+    "expect.js": "^0.3.1",
+    "express": "^4.0.0",
+    "mocha": "^2.4.5"
+  },
+  "dependencies": {
+    "doctrine": "^1.2.2",
+    "methods": "*"
+  }
 }
